--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.6",
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.2",
+    "@nestjs/websockets": "^9.1.6",
+    "@types/socket.io": "^3.0.2",
     "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "fs-extra": "^10.1.0",
+    "node-geocoder": "^4.2.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -57,6 +61,7 @@
     "@types/jest": "28.1.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/node-geocoder": "^3.24.5",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/sequelize": "^4.28.14",
